fix low contrast on footnote reference hover

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -213,6 +213,9 @@ blockquote
   border-color: $highlight
   text-decoration: none
 
+.footnote-reference > a:hover
+  color: $bg
+
 .footnote-definition-label
   border-color: $fg-dim
 
